@@ -23,19 +23,4 @@ sed -i s/{SRVCONF_SERVER_ID}/"${SRVCONF_SERVER_ID}"/g /opt/ADITO/config/serverco
 
 sed -i s/{JVM_XMX}/"${JVM_XMX:-1024M}"/g /opt/ADITO/bin/ADITOserver.vmoptions
 
-#workaround until install4j update
-/opt/jre/bin/java \
--cp "/opt/ADITO/lib/server/*:/opt/ADITO/lib/server/ext/*:/opt/ADITO/lib/server/plugin/*" \
--Djava.awt.headless=true \
--Xmx${JVM_XMX:-2G} \
--Dadito.home=/opt/ADITO \
--Dadito.data=/opt/ADITOData \
--Dadito.serverconfig=/opt/ADITO/config/serverconfig.xml \
--Dadito.server.port=7779 \
--Dadito.server.managerport=7778 \
--XX:+UseG1GC \
---add-modules java.xml.ws \
---add-modules java.xml.ws.annotation \
---add-modules java.xml.bind \
---add-modules java.xml.crypto \
-de.adito.aditoweb.server.Server
+/opt/ADITO/bin/ADITOserver
